tests/fail/union.stderr
error: #[derive(OpenapiType)] cannot be used on unions
 --> $DIR/union.rs:4:1
  |
4 | union Foo {
  | ^^^^^
